@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru> grub-1.99.ebuild:
+  Discard postinst mkconfig.
+
   02 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru> grub-1.99.ebuild,
   +files/grub-1.99-chroot.patch:
   Add ability CHROOT_PATH for grub-mkconfig. Fix GRUB_DISTRIBUTOR.
